# lightning-watcher

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-package.yml  test.yml
src/lightningwatcher/: __init__.py
tests/: test_lightningwatcher.py
